# rov

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: ekf_odometry.yaml
launch/: glrc_test.launch
launch/alaska/: sensors.launch
launch/cameras/: flir_mono_sync.launch
launch/dvl/: nortek_dvl_ethernet.launch
launch/glrc/processing/: ekf_odometry.launch  urdf.launch
launch/glrc/sensors/: flir_stereo_exteTrig.launch  nortek_dvl_ethernet.launch  nortek_dvl_serial.launch
launch/tank/: flir_stereo_triggered_autoExposure.launch  microstrain_ahrs.launch
rov/: CMakeLists.txt  Notes.md  Operation_Sheet.md  TODO.md  package.xml  underice_dataset.md
rov/config/: bashrc.txt  hosts.txt
rov/config/bluerov_video/: readme.md
rov/config/calibration/kalibr/: kalibr_cam  kalibr_cam_imu  target_april_7x5.yaml  target_checker_10x7.yaml
rov/config/calibration/opencv/: cam_left_air_compressed.xml  cam_left_tank_raw.xml
rov/config/calibration/result/: config_imu.yaml  config_stereo.yaml  config_stereo_compressed.yaml  config_stereo_raw.yaml  config_stereo_raw_remap.yaml
rov/config/jetson/: pps_jetson.md
rov/config/system/: hardware_diagram.drawio  software_diagram.drawio
rov/config/time/: chrony.conf  gpsd  ptpd_setup.md  run_time_sync.sh  time_sync_note.txt  ttyTHSO_permission.md
rov/config/udev/: usb_rules.txt
rov/config/vscode/: workspace.code-workspace
rov_devices/: CMakeLists.txt  README.md  package.xml
rov_onboard/: CMakeLists.txt  Readme.md  package.xml
rov_onboard/launch/alaska/: sensors.launch  synchronizer.launch
rov_onboard/launch/glrc/sensors/: microstrain_ahrs.launch  oculus_sonar.launch
rov_onboard/launch/sensors/ahrs/: microstrain_ahrs_sync.launch
rov_onboard/launch/sensors/arduino/: arduino_serial.launch
rov_onboard/launch/sensors/cameras/: flir_mono.launch  flir_mono_softTrig.launch  flir_mono_test.launch  flir_stereo_exteTrig.launch  flir_stereo_softTrig.launch  flir_stereo_sync.launch  flir_stereo_triggered_autoExposure.launch
rov_onboard/launch/sensors/dvl/: nortek_dvl_ethernet.launch  nortek_ethernet.launch
rov_onboard/launch/sensors/sonar/: oculus_sonar.launch
rov_onboard/launch/sensors/urdf/: urdf_alaska.launch  urdf_beachPond.launch  urdf_glrc.launch  urdf_test.launch
rov_onboard/launch/tank/: flir_stereo_triggered_fixExposure.launch  tank_test.launch
rov_onboard/urdf/: alaska.urdf  beach_pond.urdf  rov.urdf  rov.urdf.xacro  test.urdf
rov_processing/: CMakeLists.txt  package.xml
rov_processing/config/robot_localization/: imu_vel_dep.yaml
rov_processing/config/robot_localization/alaska/: imu_vel_dep_nofilter.yaml
rov_processing/config/robot_localization/glrc/: imu_raw.yaml  imu_vel_raw.yaml
rov_processing/include/kalman-cpp/: kalman.cpp  kalman.hpp
rov_processing/launch/robot_localization/: alaska_nav.launch  alaska_odom.launch  beachPond_nav.launch  beachPond_odom.launch  glrc_nav.launch  glrc_odom.launch  test_nav.launch  test_odom.launch
rov_processing/src/: proc_dvl_ethernet.cpp  proc_dvl_serial.cpp  pub_path.cpp
rov_processing/test/: test_buttomtrack.cpp  test_pointcloud.cpp
rov_remote/: CMakeLists.txt  README.md  Readme.md  package.xml
rov_remote/config/calibration/: images_list.xml  opencv_calib_10x7.xml
rov_remote/launch/: alaska.perspective  beach_pond.rviz  default.rviz  remote_visualization.launch  rqt.perspective  rviz.rviz  tools_saveImg.launch  visualization.launch  visualization_alaska.launch  visualization_glrc.launch
rov_remote/launch/helper_launch/: image_transport.launch
rov_remote/launch/visualization_config/: alaska.perspective  default.rviz  tools_saveImg.perspective
rov_remote/result/gps/: 1647358788_middleton.csv  1648089765.csv  1648497494.csv  1648578490.csv  1648580759.csv  1648665819.csv  test_1646861177.csv
rov_remote/result/restore_dvl/: test_note.txt
rov_remote/scripts/: preprocess_dvl.py  save_gps.py  verify_timeoffset.py
rov_remote/test/: eigen_to_tf.cpp  path_pub.cpp
rov_remote/tools/: calibrate_camera.cpp  save_images.cpp
rov_remote/tools/cpp/: remap_dvl.cpp
rov_remote/tools/scripts/: print_filename.py  restamp_io_time.py  verify_timeoffset.py
rov_remote/tools/scripts/py2/: save_gps.py
rov_remote/tools/scripts/py3/: 01_merge_bags.py  02_recovery_sync_dvl.py  03_verify_timeoffset.py  04_restamp_bag.py  05_restamp_io_time.py  06_parse_usbl.py  07_parse_gps.py  evaluate_traj.py  evaluate_usbl_odom.py  merge_bag.py  odom_to_csv.py  read_cvs.bag  recovery_sync_dvl.py  restamp_bag.py  save_video.py  test_usbl.py  verify_timeoffset.py
rov_remote/urdf/: rov.urdf.xacro
urdf/: rov.urdf  rov_ahrsNED.urdf
