<?xml version="1.0"?>
<package format="2">
  <name>rov</name>
  <version>0.0.1</version>
  <description>Package to launch all the packages for rov under-ice navigation.</description>
  <author email="linzhao@uri.edu">Lin Zhao</author> -->
  <maintainer email="linzhao@uri.edu">Lin Zhao</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <export>
  </export>
</package>
