<package>
  <name>rov_devices</name>
  <version>0.0.1</version>
  <description>Packages for manage rov.</description>
  <author>Lin Zhao</author>
  <maintainer email="linzhao@uri.edu">Lin Zhao</maintainer>
  <license>TODO</license>

  <url type="website">https://github.com/GSO-soslab/rov</url>


  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <metapackage/>
  </export>

</package>
