<?xml version="1.0"?>
<package format="2">
  <name>rov_remote</name>
  <version>0.0.1</version>
  <description>Package to launch visualization packages for rov under-ice navigation.</description>
  <author email="linzhao@uri.edu">Lin Zhao</author> -->
  <maintainer email="linzhao@uri.edu">Lin Zhao</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
